# vortex

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.useCurrentArch  ERRORS.md  ISSUES.md  README.md  WORK.md  docker-compose.yml
crates/cerotis/: .gitignore  Cargo.toml  Dockerfile
crates/cerotis/resources/: application-local.yml  create_user_online_v1.avsc
crates/cerotis/src/: api.rs  fen_update.rs  main.rs  mongo_pool.rs  mqtt_client.rs
crates/cerotis/src/avro/: create_user_online_avro.rs  mod.rs
crates/cerotis/src/conf/: config_types.rs  configuration.rs
crates/cerotis/src/context/: context.rs
crates/cerotis/src/controllers/: mod.rs  user_controller.rs
crates/cerotis/src/kafka/: consumer.rs  decoder.rs  init_consumer.rs  key_avro.rs  mod.rs
crates/cerotis/src/mqtt_events/: all_mqtt_events.rs  mod.rs  mqtt_event_model.rs  user_mqtt_events.rs
crates/common-tracing/: Cargo.toml
crates/common-tracing/src/: lib.rs
crates/helix/: Cargo.toml
crates/helix/resources/: application-local.yml
crates/helix/src/: init_mongo_connection.rs  main.rs
crates/helix/src/conf/: config_types.rs  configuration.rs  mod.rs
crates/helix/src/context/: context.rs
crates/helix/src/kafka/: consumer.rs
crates/hyperion/: Cargo.toml
crates/hyperion/resources/: application-local.yml  application.yml
crates/hyperion/src/: executor.rs  main.rs
crates/hyperion/src/conf/: config_types.rs  configuration.rs  mod.rs
crates/hyperion/src/context/: context.rs
crates/messier/: Cargo.toml  Dockerfile  events.md
crates/messier/resources/: application-local.yml  create_user_game_v1.avsc
crates/messier/src/: logging_tracing.rs  main.rs  mongo_pool.rs
crates/messier/src/common/: dto.rs  mod.rs  schema_create_user_game_event.rs  schema_key.rs
crates/messier/src/conf/: config_types.rs  configuration.rs  mod.rs
crates/messier/src/constants/: environment_variables.rs
crates/messier/src/context/: context.rs
crates/messier/src/controllers/: game_controller.rs  mod.rs  payloads.rs  user_auth_controller.rs  user_logic_controller.rs
crates/messier/src/errors/: mod.rs
crates/messier/src/event_producer/: game_events_producer.rs  mod.rs  user_events_producer.rs
crates/messier/src/kafka/: avro_decoder.rs  init_producer.rs  mod.rs  model.rs
crates/messier/src/models/: mod.rs  users.rs  users_friends_requests.rs
crates/messier/src/mongo/: event_converter.rs  event_dispatcher.rs  event_service.rs  kafka_event_models.rs  mod.rs  send_kafka_events_to_mongo.rs  user_game_converter.rs
crates/messier/src/routes/: game_logic_routes.rs  mod.rs  user_auth_routes.rs  user_logic_routes.rs
crates/messier/src/state/: mod.rs
crates/messier/src/utils/: generate_random_string.rs  jwt.rs  middleware.rs  mod.rs
crates/messier/src/ws_events/: game_events.rs  mod.rs  user_events.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240520_200614_add_table_in_friend_requests.rs  m20241119_200327_add_isonline_column.rs  m20241123_171604_game_bets.rs  m20250114_171855_create_session_in_game_bet.rs  m20250125_214938_game_bets_alter.rs  m20250215_062359_add_tables_in_game_bets.rs  m20250216_090434_game.rs  m20250302_105736_add_bool_tables_to_game_bets.rs
crates/nebula/: Cargo.toml  Dockerfile
crates/nebula/resources/: application-local.yml
crates/nebula/src/: main.rs
crates/nebula/src/conf/: config_types.rs  configuration.rs
crates/nebula/src/context/: context.rs
crates/nebula/src/controllers/: mod.rs  payload.rs  user_game_bet_controllers.rs
crates/nebula/src/errors/: mod.rs
crates/nebula/src/kafka/: consumer.rs
crates/nebula/src/routes/: mod.rs  user_game_bet_routes.rs
crates/nebula/src/state/: mod.rs
crates/nebula/src/utils/: mod.rs
crates/nova/: Cargo.toml  Dockerfile
crates/nova/resources/: application-local.yml
crates/nova/src/: main.rs
crates/nova/src/conf/: config_types.rs  configuration.rs
crates/nova/src/context/: context.rs
crates/orion/: Cargo.toml  Dockerfile
crates/orion/src/: lib.rs
crates/orion/src/constants/: mod.rs
crates/orion/src/events/: kafka_event.rs  mod.rs  mqtt_subscribe_events.rs  ws_events.rs
crates/orion/src/models/: chess_events.rs  game_bet_events.rs  game_model.rs  mod.rs  user_game_event.rs  user_game_relation_model.rs  user_score_update_event.rs  user_turn_model.rs
crates/saggitarius/: Cargo.toml  Dockerfile
crates/saggitarius/resources/: application-local.yml
crates/saggitarius/src/: job.rs  main.rs  schedule.rs
crates/saggitarius/src/conf/: config_types.rs  configuration.rs
crates/saggitarius/src/event/service/: event_service.rs
crates/saggitarius/src/kafka/: consumer.rs  producer.rs
crates/saggitarius/src/mongo/: mod.rs  pool.rs  transaction.rs
crates/ton/: Cargo.toml
crates/ton/src/models/: game.rs  game_bets.rs  mod.rs  users.rs  users_friends.rs  users_friends_requests.rs  users_wallet_keys.rs
migrations/: 20240127172731_init.up.sql
scripts/: build-image-layer.sh  create-databases.sh  create-kafka-topics.sh  docker-compose-up.sh  init-mongo.sh  publish-debug-image.sh  try-tag-and-release.sh
src/: main.rs
src/constants/: mod.rs
src/controllers/: game_controller.rs  mod.rs  user_controller.rs
src/ctx/: mod.rs
src/errors/: mod.rs
src/middlewares/: mod.rs
src/models/: mod.rs  prelude.rs  user_model.rs  users.rs  users_friends.rs  users_friends_requests.rs  users_wallet_keys.rs
src/routes/: game_logic_routes.rs  mod.rs  user_auth_routes.rs  user_logic_routes.rs  user_routes.rs
src/state/: mod.rs
src/utils/: jwt.rs  middleware.rs
src/ws_events/: game_events.rs  user_events.rs
