[package]
name = "vortex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
chrono = "0.4.32"
diesel = "2.1.4"
diesel_migrations = "2.1.0"
lazy-regex = "3.1.0"
sea-orm = "0.12.12"
serde = "1.0.195"
serde_json = "1.0.111"
strum_macros = "0.25.3"
tokio = { version = "1.35.1", features = ["full"] }
tower-cookies = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.7.0"
