[package]
name = "vortex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
chrono = { version = "0.4.32", features = ["serde"] }
dotenv = "0.15.0"
lazy-regex = "3.1.0"
lettre = "0.11.4"
redis = { version = "0.24.0", features = ["tokio-comp"] }
rust-argon2 = "2.1.0"
sea-orm = "0.12.12"

#serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

strum_macros = "0.25.3"
tokio = { version = "1.35.1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
