[package]
name = "cerotis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
axum = "0.7.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
socketioxide = "0.10.2"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
config = "0.14.0"
mongodb = "2.8.2"
redis = "0.25.2"
tracing-opentelemetry = "0.23.0"
apache-avro = "0.16.0"
schema_registry_converter = { git = "https://github.com/gklijs/schema_registry_converter", branch = "main", features = ["avro"] }
opentelemetry = "0.22.0"
