[package]
name = "common-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum-tracing-opentelemetry = { version = "0.5.0", features = ["jaeger"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
