[package]
name = "helix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
schema_registry_converter = { git = "https://github.com/gklijs/schema_registry_converter", branch = "main", default-features = false, features = ["avro", "blocking"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

