[package]
name = "helix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
mongodb = { version = "2.8.2" , features = ["zstd-compression", "snappy-compression", "zlib-compression"]}
rdkafka = { version = "0.36.2" , features = ["cmake-build"] }
tokio = "1.36.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
config = "0.14.0"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-opentelemetry = "0.23.0"
bson = { version = "2.4.0", features = ["uuid-1", "serde_with"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
orion = {path = "../orion"}