[package]
name = "orion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.10.0" , features = ["uuid-1", "serde_with"] }
serde = "1.0.197"
serde_bytes = "0.11.14"
serde_json = "1.0.115"
uuid =  { version = "1.8.0" , features = ["serde", "v4"] }
