[package]
name = "saggitarius"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
mongodb = "2.8.2"
rdkafka = "0.36.2"
tokio = "1.36.0"



#serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
config = "0.14.0"
futures = "0.3.30"
tokio-cron-scheduler = "0.10.0"
serde_bytes = "0.11.14"
anyhow = "1.0.81"
