[package]
name = "ton"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "ton"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = "0.12.12"
uuid = { version = "1.7.0", features = ["serde", "v4"] }